[package]
name = "bus_open_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.10"
tokio = { version = "1.18.2", features = ["full"] }
roxmltree = "0.14.1"
chrono = "0.4.19"
staticmap = { path = "../staticmap" }
